--- a/firmware/ground-station/app/static/html/index.html
+++ b/firmware/ground-station/app/static/html/index.html
@@ -15,6 +15,7 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""
         ></script>
+        <script type="module" src="/static/js/index.js"></script>
         <style>
             #map {
                 height: 100vh;
@@ -23,6 +24,5 @@
     </head>
     <body>
         <div id="map"></div>
-        <script src="/static/js/index.js"></script>
     </body>
 </html>
