--- a/firmware/ground-station/app/frontend/index.html
+++ b/firmware/ground-station/app/frontend/index.html
@@ -7,49 +7,94 @@
         <link rel="stylesheet" href="/static/css/index.css" />
         <link rel="stylesheet" href="/static/css/leaflet.css" />
         <script type="module" src="/src/main.ts"></script>
+        <style>
+            body {
+                font-family: "Inter", sans-serif;
+            }
+            .no-scrollbar::-webkit-scrollbar {
+                display: none;
+            }
+            .no-scrollbar {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+        </style>
     </head>
     <body class="bg-[#050809] text-white">
-        <nav id="topbar" class="flex sticky w-full justify-between p-2 pl-3">
-            <div id="title">
-                <h1 class="text-white text-xs">The Retrievers</h1>
-                <h3 class="text-white text-lg">Ground Station</h3>
+        <nav
+            id="topbar"
+            class="sticky top-0 z-50 bg-[#050809]/90 backdrop-blur-md border-b border-gray-800 w-full flex justify-between items-center p-3 shadow-lg"
+        >
+            <div id="title" class="leading-tight py-1">
+                <h1
+                    class="text-gray-400 text-[0.65rem] uppercase tracking-widest font-bold"
+                >
+                    The Retrievers
+                </h1>
+                <h3 class="text-white text-xl font-bold">Ground Station</h3>
             </div>
             <div id="status" class="flex gap-2">
-                <div class="bg-gray-700 text-white rounded-xl px-5 text-center">
-                    <h1 class="text-[1rem]">FSM:</h1>
-                    <h3 id="fsm-state" class="text-sm">Prelaunch</h3>
+                <div
+                    class="bg-gray-800 border border-gray-700 rounded-lg px-3 py-1 flex flex-col items-center"
+                >
+                    <span class="text-[0.6rem] text-gray-400 uppercase"
+                        >FSM</span
+                    >
+                    <div class="flex items-center gap-1">
+                        <h3 id="fsm-state" class="text-xs font-bold">
+                            Prelaunch
+                        </h3>
+                    </div>
                 </div>
-                <div class="bg-gray-700 text-white rounded-xl px-5 text-center">
-                    <h1 class="text-[1rem]">GPS:</h1>
-                    <h3 id="gps-state" class="text-sm">Fix</h3>
+                <div
+                    class="bg-gray-800 border border-gray-700 rounded-lg px-3 py-1 flex flex-col items-center"
+                >
+                    <span class="text-[0.6rem] text-gray-400 uppercase"
+                        >GPS</span
+                    >
+                    <div class="flex items-center gap-1">
+                        <span
+                            id="fix-status"
+                            style="background-color: red"
+                            class="w-2 h-2 rounded-xl animate-pulse shadow-xl"
+                        ></span>
+                        <h3 id="gps-state" class="text-xs font-bold">No Fix</h3>
+                    </div>
                 </div>
             </div>
         </nav>
         <main id="map-section" class="rounded-xl w-full p-2">
-            <div id="map" class="h-[40vh] md:h-[90vh] rounded-xl"></div>
+            <div
+                style="z-index: 10"
+                id="map"
+                class="h-[40vh] md:h-[90vh] rounded-xl"
+            ></div>
         </main>
         <section id="map-controls" class="flex justify-between px-3">
             <button
                 id="follow-me"
-                class="bg-gray-700 px-5 py-3 rounded-xl text-white text-md"
+                class="bg-gray-700 px-5 py-3 rounded-xl text-white text-md hover:bg-gray-600"
             >
                 Go to Me
             </button>
             <button
                 id="follow-psat"
-                class="bg-gray-700 px-5 py-3 rounded-xl text-white text-md"
+                class="bg-gray-700 px-5 py-3 rounded-xl text-white text-md hover:bg-gray-600"
             >
                 Follow PSAT
             </button>
             <button
                 id="toggle-path"
-                class="bg-gray-700 px-5 py-3 rounded-xl text-white text-md"
+                class="bg-gray-700 px-5 py-3 rounded-xl text-white text-md hover:bg-gray-600"
             >
                 Toggle Path
             </button>
         </section>
-        <!-- <section id="main-data">
-            <div id="gps-data">
+        <section id="main-data">
+            <div
+                id="gps-data"
+                class="bg-gray-800 border border-gray-700 rounded-lg"
+            >
                 <h1>GPS Data</h1>
                 <h3>Position: <span id="gps-position"></span></h3>
                 <h3>Altitude: <span id="gps-altitude"></span></h3>
@@ -103,6 +148,6 @@
         <section id="log-section">
             <h1>Log:</h1>
             <pre id="log-data"></pre>
-        </section> -->
+        </section>
     </body>
 </html>
