feat: show lora stats and other gps data on ui

--- a/firmware/ground-station/app/frontend/index.html
+++ b/firmware/ground-station/app/frontend/index.html
@@ -106,8 +106,8 @@
                 </h3>
                 <div class="text-sm space-y-1">
                     <p>Pos: <span id="gps-position"></span></p>
-                    <p>Alt: <span id="gps-altitude"></span></p>
-                    <p>Spd: <span id="gps-speed"></span></p>
+                    <p>Altitude: <span id="gps-altitude"></span></p>
+                    <p>Speed: <span id="gps-speed"></span></p>
                     <p>Sats: <span id="gps-satelites"></span></p>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <span id="fsm-current-state" class="font-semibold"></span>
                 </p>
                 <p class="text-xs text-gray-400">
-                    Prev: <span id="fsm-prev-state"></span>
+                    Prev: <span id="fsm-prev-state">Not Implmented Yet</span>
                 </p>
             </div>
 
@@ -192,10 +192,15 @@
                     Sensors
                 </h3>
                 <p class="text-sm">
-                    Pressure: <span id="sensors-pressure"></span>
+                    Pressure:
+                    <span id="sensors-pressure">Not Implmented Yet</span>
                 </p>
-                <p class="text-sm">High G: <span id="sensors-highg"></span></p>
-                <p class="text-sm">Low G: <span id="sensors-lowg"></span></p>
+                <p class="text-sm">
+                    High G: <span id="sensors-highg">Not Implmented Yet</span>
+                </p>
+                <p class="text-sm">
+                    Low G: <span id="sensors-lowg">Not Implmented Yet</span>
+                </p>
             </div>
 
             <div
@@ -205,9 +210,15 @@
                 <h3 class="text-xs uppercase tracking-wider text-gray-400 mb-2">
                     Other
                 </h3>
-                <p class="text-sm">Servo: <span id="other-servo"></span></p>
-                <p class="text-sm">Camera: <span id="other-camera"></span></p>
-                <p class="text-sm">Buzzer: <span id="other-buzzer"></span></p>
+                <p class="text-sm">
+                    Servo: <span id="other-servo">Not Implmented Yet</span>
+                </p>
+                <p class="text-sm">
+                    Camera: <span id="other-camera">Not Implmented Yet</span>
+                </p>
+                <p class="text-sm">
+                    Buzzer: <span id="other-buzzer">Not Implmented Yet</span>
+                </p>
             </div>
         </section>
 
@@ -222,7 +233,9 @@
                 <pre
                     id="log-data"
                     class="text-xs text-green-400 max-h-48 overflow-y-auto no-scrollbar"
-                ></pre>
+                >
+Not Implmented Yet</pre
+                >
             </div>
         </section>
     </body>
