--- a/firmware/ground-station/app/frontend/index.html
+++ b/firmware/ground-station/app/frontend/index.html
@@ -20,6 +20,19 @@
                 -ms-overflow-style: none;
                 scrollbar-width: none;
             }
+
+            .gs-btn {
+                transition:
+                    transform 0.08s ease,
+                    background-color 0.12s ease,
+                    box-shadow 0.12s ease;
+                touch-action: manipulation;
+            }
+
+            .gs-btn:active {
+                transform: scale(0.96);
+                box-shadow: inset 0 0 0 999px rgba(255, 255, 255, 0.06);
+            }
         </style>
     </head>
 
@@ -76,21 +89,21 @@
         <section id="map-controls" class="grid grid-cols-3 gap-2 px-2 pb-2">
             <button
                 id="follow-me"
-                class="bg-gray-900 border border-gray-700 py-3 rounded-xl text-sm font-medium active:bg-gray-700"
+                class="bg-gray-900 gs-btn border border-gray-700 py-3 rounded-xl text-sm font-medium active:bg-gray-700"
             >
                 Me
             </button>
 
             <button
                 id="follow-psat"
-                class="bg-gray-900 border border-gray-700 py-3 rounded-xl text-sm font-medium active:bg-gray-700"
+                class="bg-gray-900 gs-btn border border-gray-700 py-3 rounded-xl text-sm font-medium active:bg-gray-700"
             >
-                PSAT
+                Follow PSAT
             </button>
 
             <button
                 id="toggle-path"
-                class="bg-gray-900 border border-gray-700 py-3 rounded-xl text-sm font-medium active:bg-gray-700"
+                class="bg-gray-900 gs-btn border border-gray-700 py-3 rounded-xl text-sm font-medium active:bg-gray-700"
             >
                 Path
             </button>
